@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: November 28, 2008</p>
+      <p>Last Updated: December 3, 2008</p>
     </td>
   </tr>
 </table>
@@ -1205,11 +1205,13 @@ buildroot-0.1.2 2007-11-06 &lt;spudmonkey@racsa.co.cr&gt
 
 <pre><ul>
 nuttx-0.3.20 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
-	* Initial release of a tiny windowing system for NuttX (not well tested at initial check-in)
+	* Initial release of a tiny windowing system for NuttX
 	* Add fixed precision sin() and cos() (not well tested at initial check-in)
 	* Add an X11-based simulated framebuffer driver
 	* The simulated target now has an option (CONFIG_SIM_WALLTIME) that will let the simulation
 	  run in more-or-less realtime.
+	* Added more more extensive window support:  frames, toolbars, etc.
+	* Added support for bitmap fonts
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
