@@ -589,8 +589,11 @@
 	* Added some rasterizers to the graphics library
 
 0.3.20 2008-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
-	* Initial release of a tiny windowing system for NuttX (not well tested at initial check-in)
+	* Initial release of a tiny windowing system for NuttX
 	* Add fixed precision sin() and cos() (not well tested at initial check-in)
 	* Add an X11-based simulated framebuffer driver
 	* The simulated target now has an option (CONFIG_SIM_WALLTIME) that will let the simulation
 	  run in more-or-less realtime.
+	* Added more more extensive window support:  frames, toolbars, etc.
+	* Added support for bitmap fonts
+
